--- a/css/game.css
+++ b/css/game.css
@@ -35,14 +35,35 @@ main {
 header {
   text-align: center;
   background: #fb6542;
-  padding: 1em 0;
+  padding: 1em;
   color: #fff;
+  display: flex;
+  align-items: center;
 }
 
 header h1 {
-  font-size: 2.8em;
+  font-size: 2.2em;
   max-width: var(--max-width-content);
   margin: auto;
+}
+
+.install {
+  border: none;
+  outline: none;
+  background: none;
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.install img {
+  padding: 10px;
+}
+
+.install.hidden {
+  display: none;
 }
 
 .result {
