--- a/css/game.css
+++ b/css/game.css
@@ -32,6 +32,7 @@ main {
   margin: 0;
   touch-action: manipulation;
 }
+
 header {
   text-align: center;
   background: #fb6542;
@@ -39,31 +40,31 @@ header {
   color: #fff;
   display: flex;
   align-items: center;
-}
 
-header h1 {
-  font-size: 2.2em;
-  max-width: var(--max-width-content);
-  margin: auto;
-}
+  h1 {
+    font-size: 2.2em;
+    max-width: var(--max-width-content);
+    margin: auto;
+  }
 
-.install {
-  border: none;
-  outline: none;
-  background: none;
-  width: 40px;
-  height: 40px;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
+  .install {
+    border: none;
+    outline: none;
+    background: none;
+    width: 40px;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+    display: flex;
 
-.install img {
-  padding: 10px;
-}
+    img {
+      padding: 10px;
+    }
 
-.install.hidden {
-  display: none;
+    &&.hidden {
+      display: none;
+    }
+  }
 }
 
 .result {
@@ -76,47 +77,47 @@ header h1 {
   max-width: var(--max-width-content);
   margin: auto;
   width: 100%;
-}
-.currentResult {
-  grid-area: resultMessage;
-  font-size: 3em;
-  font-weight: 900;
-  animation-duration:0.5s;
-  animation-name: slidein;
-}
-.humanScore { grid-area: humanScore; }
-.humanResult { grid-area: humanResult; }
-.computerScore { grid-area: computerScore; }
-.computerResult { grid-area: computerResult; }
-.vs {
-  grid-area: vs;
-  display: flex;
-  align-items: center;
-  font-size: 1.2em;
-  font-weight: 900;
-}
-.vs span {
-  margin: 0 8px;
+  .currentResult {
+    grid-area: resultMessage;
+    font-size: 3em;
+    font-weight: 900;
+    animation-duration:0.5s;
+    animation-name: slidein;
+  }
+  .humanScore { grid-area: humanScore; }
+  .humanResult { grid-area: humanResult; }
+  .computerScore { grid-area: computerScore; }
+  .computerResult { grid-area: computerResult; }
+  .vs {
+    grid-area: vs;
+    display: flex;
+    align-items: center;
+    font-size: 1.2em;
+    font-weight: 900;
+    span {
+      margin: 0 8px;
+    }
+  }
+
+  .resultIcons,
+  .currentResult {
+    display: flex;
+    justify-content: center;
+  }
+
+  .humanScore,
+  .computerScore {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 2em;
+    margin-top: 1em;
+    .data {
+      font-size: 2.2em;
+    }
+  }
 }
 
-.resultIcons,
-.currentResult {
-  display: flex;
-  justify-content: center;
-}
-
-.humanScore,
-.computerScore {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 2em;
-  margin-top: 1em;
-}
-.humanScore .data,
-.computerScore .data {
-  font-size: 2.2em;
-}
 
 .reset {
   grid-area: reset;
@@ -124,20 +125,21 @@ header h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  button {
+    outline: none;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    padding: 6px;
+    box-shadow: -2px -2px 4px rgb(0 0 0 / 10%), 2px 2px 4px rgb(0 0 0 / 25%);
+    display: flex  ;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-.reset button {
-  outline: none;
-  border: none;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  padding: 6px;
-  box-shadow: -2px -2px 4px rgb(0 0 0 / 10%), 2px 2px 4px rgb(0 0 0 / 25%);
-  display: flex  ;
-  justify-content: center;
-  align-items: center;
-}
 
 .round-container {
   box-shadow: -2px -2px 4px rgb(0 0 0 / 10%), 2px 2px 4px rgb(0 0 0 / 25%);
@@ -151,30 +153,32 @@ header h1 {
   margin: auto;
   font-size: 1.3em;
   padding: 7px 0;
-}
 
-.round-state p {
-  margin: 0;
-  padding: 0;
+  p {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .best-score {
   display: flex;
   align-items: center;
+
+  button {
+    border: none;
+    outline: none;
+    background: none;
+    display: flex;
+    justify-content: center;
+
+    img {
+      display: inline-block;
+      width: 25px;
+      height: 25px;
+    }
+  }
 }
 
-.best-score button {
-  border: none;
-  outline: none;
-  background: none;
-  display: flex;
-  justify-content: center;
-}
-.best-score button img {
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-}
 
 .ui {
   padding: 1em;
@@ -182,30 +186,33 @@ header h1 {
   position: fixed;
   bottom: 0;
   width: 100%;
+
+  .ui-container {
+    display: grid;
+    gap: 3em;
+    grid-template-columns: repeat(3, 1fr);
+    border-radius: 10px;
+    padding: 1em;
+    max-width: var(--max-width-content);
+    margin: auto;
+  }
+
+  .icon-container {
+    display: flex;
+    justify-content: center;
+
+    button {
+      border-radius: 50%;
+      outline: none;
+      padding: 1.1em;
+      border: none;
+      box-shadow: -2px -2px 4px rgb(0 0 0 / 10%), 2px 2px 4px rgb(0 0 0 / 25%);
+      max-width: 70px;
+    }
+  }
 }
 
-.ui .ui-container {
-  display: grid;
-  gap: 3em;
-  grid-template-columns: repeat(3, 1fr);
-  border-radius: 10px;
-  padding: 1em;
-  max-width: var(--max-width-content);
-  margin: auto;
-}
-.ui .icon-container {
-  display: flex;
-  justify-content: center;
-}
 
-.ui .icon-container button {
-  border-radius: 50%;
-  outline: none;
-  padding: 1.1em;
-  border: none;
-  box-shadow: -2px -2px 4px rgb(0 0 0 / 10%), 2px 2px 4px rgb(0 0 0 / 25%);
-  max-width: 70px;
-}
 
 @keyframes slidein {
   from {
